--- a/videoapp/package.json
+++ b/videoapp/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-loader": "^7.1.0",
+    "babel-preset-react": "^6.24.1",
     "nodemon": "^1.11.0",
     "webpack": "^3.0.0",
     "webpack-dev-middleware": "^1.11.0"
