--- a/videoapp/package.json
+++ b/videoapp/package.json
@@ -14,8 +14,10 @@
     "babel-loader": "^7.1.0",
     "babel-preset-react": "^6.24.1",
     "nodemon": "^1.11.0",
+    "react-hot-loader": "^1.3.1",
     "webpack": "^3.0.0",
-    "webpack-dev-middleware": "^1.11.0"
+    "webpack-dev-middleware": "^1.11.0",
+    "webpack-hot-middleware": "^2.18.0"
   },
   "dependencies": {
     "express": "^4.15.3",
