--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-router": "^3.0.0",
     "react-scripts": "1.0.10",
     "redux": "^3.7.1",
+    "redux-form": "^7.0.2",
     "redux-thunk": "^2.2.0",
     "shortid": "^2.2.8",
     "validator": "^7.2.0",
